Refactor: SAL Rule selection and GameScreenView - Refactor